# ascend_learning

AddKernelInvocationNeo/: add_custom.cpp  main.cpp
AddKernelInvocationNeo/scripts/: verify_result.py
AddKernelInvocationTilingNeo/: add_custom.cpp  main.cpp
AddKernelInvocationTilingRemoveBanckConflictNeo/: add_custom.cpp  main.cpp
AddKernelInvocationTilingRemoveBanckConflictNeo/scripts/: gen_data.py
AddKernelTilingBankConflictNeo/: CMakeLists.txt  add_custom_tiling.h  add_custom_v1.cpp  main.cpp  run.sh
AddKernelTilingBankConflictNeo/scripts/: gen_data.py  verify_result.py
AddKernelTilingRawNeo/: CMakeLists.txt  add_custom.cpp  add_custom_tiling.h  main.cpp  multiply_add_custom.cpp  run_test.sh
MultiplyAddKernelInvocationNeo/: CMakeLists.txt  main.cpp  multiply_add_custom.cpp  multiply_add_custom_tiling.h  run.sh
MultiplyAddKernelInvocationNeo/scripts/: gen_data.py  verify_result.py
MultiplyAddKernelReduceLocal/: main.cpp  multiply_add_custom.cpp
MultiplyAddKernelReduceLocal2/: main.cpp  multiply_add_custom.cpp  run.sh
MultiplyAddKernelReduceLocal2/scripts/: gen_data.py  verify_result.py
aclnn_baseline/add/AddKernelInvocationNeo/: add_custom.cpp  ascendc_kernels_bbit  main.cpp  run.sh
aclnn_baseline/add/AddKernelInvocationNeo/scripts/: gen_data.py
aclnn_baseline/baseline/: main.cpp
aclnn_baseline/baseline/add/: CMakeLists.txt  add.cpp
aclnn_baseline/baseline/dot/: CMakeLists.txt  dot.cpp  main.cpp
aclnn_baseline/baseline/mul/: CMakeLists.txt  mul.cpp
aclnn_baseline/torch/: torch.py
